syntax = "proto3";

package memship;

import "google/protobuf/any.proto";

// Task is the message for a client task.
message Task {
    repeated uint32 remove = 1;
    bytes addr = 2;
    google.protobuf.Any publicKey = 3;
}
