syntax = "proto3";

package smartcontract;

import "google/protobuf/any.proto";

message InstanceProto {
    bytes key = 1;
    google.protobuf.Any value = 2;
    string contractID = 3;
    bool deleted = 4;
    bytes accessControl = 5;
}

message Spawn {
    string contractID = 1;
    google.protobuf.Any argument = 2;
}

message Invoke {
    bytes key = 1;
    google.protobuf.Any argument = 2;
}

message Delete {
    bytes key = 1;
}

message TransactionProto {
    uint64 nonce = 1;

    oneof action {
        Spawn spawn = 2;
        Invoke invoke = 3;
        Delete delete = 4;
    }

    google.protobuf.Any identity = 5;
    google.protobuf.Any signature = 6;
}
